--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             Go To Top <!--<i class="fa-solid fa-arrow-up" style="text-shadow: none; font-size: 0.75rem;"></i>  -->
         </a>
     </div>
+
+    
     <!-- header start -->
 
     <div class="offcanvas offcanvas-end text-bg-dark" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -514,7 +516,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d232.43495327120542!2d72.86712461157092!3d21.23346435224269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDE0JzAwLjciTiA3MsKwNTInMDIuMyJF!5e0!3m2!1sen!2sin!4v1741261064114!5m2!1sen!2sin"
                         width="100%" height="100%" style="border:0; box-shadow: 0px 22px 2001px -95px rgb(0, 0, 0);"
-                        class="rounded-4 m-0" allowfullscreen=""
+                        class="rounded-4 m-0" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -522,13 +524,13 @@
         </div>
     </section>
     <!-- contact end -->
-    <!-- <script>
+    <script>
         var loader = document.getElementById("preloader");
 
         window.addEventListener("load", function () {
             loader.style.display = "none";
         })
-    </script> -->
+    </script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
